# pScreen

./: .gitignore  .gitmodules  README.md
CAD/: asanoha.scad  bottom.scad  generateAllSTLs.sh  screen_measurements_for_long_disp.txt  side.scad  side.stl  stand_panel.scad  top.scad  top.stl
CAD/Blender/: SSD1322.blend
CAD/Fritzing/: Wiring-SSD1306.fzz  Wiring-SSD1322.fzz
CAD/OpenSCAD/: bottom.scad  side.scad  stand_panel.json  stand_panel.scad  top.json  top.scad
CAD/STLs/: SSD1306_bottom.stl  SSD1306_side.stl  SSD1306_stand_panel.stl  SSD1306_top.stl  SSD1322_bottom.stl  SSD1322_side.stl  SSD1322_stand_panel.stl  SSD1322_top.stl
Mockups/: media-mockup-1.xcf  mockup-1.xcf  mockup-2.xcf  monitor.xcf  tread-esque-pscreen.xcf
Mockups/assets/: bg.xcf
Software/Companion App/: cross_compile_for_windows.sh  go.mod  go.sum  main.go  pscreenapp
Software/Companion App/bridge/: bridge.go
Software/Companion App/bridge/comms/: comms.go
Software/Companion App/bridge/encoder/: encoder.go
Software/Companion App/bridge/modules/: modules.go
Software/Companion App/bridge/modules/blank/: blank.go
Software/Companion App/bridge/modules/clock/: clock.go
Software/Companion App/bridge/modules/discord/: discord.go
Software/Companion App/bridge/modules/dvd/: dvd.go
Software/Companion App/bridge/modules/media/: media.go
Software/Companion App/bridge/modules/monitor/: monitor.go
Software/Companion App/bridge/modules/notifications/: notifications.go
Software/Companion App/bridge/modules/osu/: osu.go
Software/Companion App/bridge/modules/pong/: pong.go
Software/Companion App/bridge/modules/qrcode/: qrcode.go
Software/Companion App/bridge/modules/screensaver/: screensaver.go
Software/Companion App/bridge/modules/teapot/: teapot.go
Software/Companion App/bridge/modules/tread/: tread.go
Software/Companion App/bridge/renderer/: renderer.go
Software/Companion App/config/: config.go
Software/Companion App/constants/: constants.go
Software/Companion App/i18n/: i18n.go
Software/Companion App/ui/: ui.go
Software/Companion App/ui/components/: components.go
Software/Companion App/ui/styling/: styling.go
Software/Companion App/utils/: utils.go
Software/Firmware/: CMakeLists.txt  build.sh  main.c  ssd1306ver.c  ssd1322ver.c
Software/Firmware/comms/: comms.c  comms.h
Software/Packaging/Arch/: PKGBUILD  go.mod  main.go
(+4 files in other folders)
